AI-3 project full structure v3